--- a/HomePage.html
+++ b/HomePage.html
@@ -3,7 +3,8 @@
   </head>
 
    <body>
-      <h1>This is P2</h1>
+     <h1>This is P2</h1>
      <h2>Welcome to our class</h2>
+     <p> chippi chippi chappa chappa </p>
     </body>
 </html>
