--- a/HomePage.html
+++ b/HomePage.html
@@ -4,10 +4,10 @@
 
    <body>
      <h1>This is P2</h1>
-     <h2>Welcome to our class, communism pOG</h2>
+     <h2>Welcome lah AI making no sense to our class</h2>
      <p> chippi chippi chappa chappa </p>
     </body>
 </html>
 <script>
-  <echo>aaaa echooooooooOoOOo </echo>
+  <echo>aaaa</echo>
 </script>
