--- a/HomePage.html
+++ b/HomePage.html
@@ -4,7 +4,7 @@
 
    <body>
      <h1>This is P2</h1>
-     <h2>Welcome to our class, communism pOG</h2>
+     <h2>Welcome to our class, communism pOG, vote for BN</h2>
      <p> chippi chippi chappa chappa </p>
     </body>
 </html>
