--- a/HomePage.html
+++ b/HomePage.html
@@ -4,10 +4,10 @@
 
    <body>
      <h1>This is P2</h1>
-     <h2>Welcome to our class, communism pOG, vote for BN</h2>
+     <h2>Welcome to our class, communism pOG, vote for BN, hell nah vote for america freedom</h2>
      <p> chippi chippi chappa chappa </p>
     </body>
 </html>
 <script>
-  <echo>aaaa echooooooooOoOOo bbbbb</echo>
+  <echo>aaaa echooooooooOoOOo bbbbb Build a wall</echo>
 </script>
