--- a/HomePage.html
+++ b/HomePage.html
@@ -5,7 +5,7 @@
    <body>
      <h1>This is P2</h1>
      <h2>Welcome to our class, communism pOG, vote for BN</h2>
-     <p> chippi chippi chappa chappa </p>
+     <p> chippi chippi chappa chappa dubi dubi laba laba</p>
     </body>
 </html>
 <script>
